fixed the size of each <li> in the dropdown menu in the page Curriculum.jsp

--- a/web/CSS/antonionrodrigues2014.css
+++ b/web/CSS/antonionrodrigues2014.css
@@ -226,6 +226,9 @@ header #links a{
     position: fixed;
 }
 
+.dropdown-toggle, .dropdownfake{
+   max-width: 150px;
+}
 
 /****************************************************
 *                                                  *                
