--- a/web/CSS/antonionrodrigues2014.css
+++ b/web/CSS/antonionrodrigues2014.css
@@ -180,7 +180,7 @@ header #links a{
 
 
 #bodyPageCurriculum{
-    background-color: white; 
+    background-color: black; 
 }
 
 #barraNavegacao li{
