--- a/web/CSS/antonionrodrigues2014.css
+++ b/web/CSS/antonionrodrigues2014.css
@@ -184,7 +184,7 @@ header #links a{
 
 #bodyPageCurriculum{
     background-color: white; 
-    
+
 }
 
 #barraNavegacao li{
@@ -231,7 +231,7 @@ header #links a{
 }
 
 .dropdown-toggle, .dropdownfake{
-   max-width: 150px;
+    max-width: 150px;
 }
 
 /****************************************************
@@ -335,9 +335,8 @@ body{
     color:#CD6600;
 }
 
-#imagemSite{
-    border: 3px solid #CD6600;
-    width: 100%;
+#imagemSite{ 
+    background: url(loading.gif) 50% no-repeat;
 }
 #imagemSite:hover{
     border: 5px solid #CD6600;
@@ -408,6 +407,6 @@ h5{
     left: 5%;
 }
 time ~ p{
-     color: #111111;
-     padding-top: 7%;
+    color: #111111;
+    padding-top: 7%;
 }
